@@ -1,4 +1,5 @@
 201X-XX-XX  UnNetHack X.X.X
+	* Quest leaders can smash rocks when angry (from SporkHack)
 	* user interface improvements:
 	  - Monster Targeting v1.2 (by Pasi Kallinen)
 	  - Changed 'C' to present a menu (from NAO)
